--- a/style.css
+++ b/style.css
@@ -82,3 +82,153 @@ and li is under nav-links */
 .nav-links li a:active{
     color: rgb(67, 130, 169);
 }
+
+/* header styling starts here */
+
+header{
+    padding-top: 150px;
+}
+
+.header-img{
+    height: 100%;
+    width: 85%;
+   
+}
+
+/* For 2 grid we using, 1fr 1fr; */
+.header-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.header-right{
+    text-align: center;
+    margin: auto;
+
+}
+
+.header-action-area{
+    display: flex;
+    margin-top: 40px;
+    gap: 20px;
+    justify-content: center;
+}
+
+.btn{
+    
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: 1px solid #DF678C;
+    width: 200px;
+    color: black;
+    font-size: 14px ;
+    font-weight: 600;
+}
+
+.btn:hover{
+    background-color: #bfa1d7;
+    font-weight: bolder;
+}
+
+.btn-d{
+    background-color: #DF678C;
+    color: white;
+}
+
+.icon-social{
+    width: 32px;
+}
+
+.header-social{
+    margin-top: 25px;
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+
+}
+
+.header-right p{
+    font-size: 18px;
+    font-weight: 600;
+    margin: auto;
+
+}
+
+.header-right h1{
+    font-size: 40px;
+    font-weight: 600;
+    margin: 15px auto;
+   
+}
+
+.header-right h2{
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px auto;
+   
+}
+
+/* Section1 - about starts here */
+
+
+
+.about-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about-container img{
+    width: 100%;
+    
+}
+
+.basic-edu{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.edu-box{
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 30px;
+    text-align: center;
+    width: 100%;
+    height: 400px;
+}
+
+.edu-box img{
+    margin: auto;
+}
+
+.about-p{
+    margin-top: 20px ;
+    font-size: 15px;
+    line-height: 20px;
+   
+}
+
+.about-title-p{
+    text-align: center;
+    font-size: 17px;
+    font-weight: 600;
+    margin-top: 70px;
+    margin-bottom: 10px;
+}
+
+.about-title-h1{
+    text-align: center;
+    font-size: 35px;
+    font-weight: 600;
+    margin-bottom: 40px;
+
+}
+
+section{
+    position: relative;
+}
