--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ header{
    
 }
 
-.about-title-p{
+.global-title-p{
     text-align: center;
     font-size: 17px;
     font-weight: 600;
@@ -221,7 +221,7 @@ header{
     margin-bottom: 10px;
 }
 
-.about-title-h1{
+.global-title-h1{
     text-align: center;
     font-size: 35px;
     font-weight: 600;
@@ -231,4 +231,67 @@ header{
 
 section{
     position: relative;
+}
+
+/* Experience Styling starts */
+.experience-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.expereience-box{
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 25px
+}
+
+.experience-box h2{
+    font-size: 30px;
+    font-weight: 600;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.experience{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px
+}
+
+.ex-div{
+    display: flex;
+    gap: 20px;
+    margin: auto;
+
+}
+
+.ex-div img{
+    width: 32px;
+    margin: auto;
+
+}
+
+/* Projects styling starts here */
+
+.project-container{
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+}
+
+.project{
+    border: 2px solid black;
+    padding: 20px;
+    border-radius: 30px;
+}
+
+.project img{
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.project h3{
+    text-align: center;
 }
