--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ nav{
     width: 100%;
     display: flex;
     place-items: center;
+    z-index: 100;
 
 
     
@@ -285,13 +286,67 @@ section{
     border: 2px solid black;
     padding: 20px;
     border-radius: 30px;
+    text-align: center;
 }
 
 .project img{
-    width: 100%;
+    width: 400px;
     margin-bottom: 5px;
+    border-radius: 30px;
 }
 
-.project h3{
+/* .project h3{
     text-align: center;
+} */
+
+/* Contact styling starts here */
+
+.contact-container{
+   display: flex;
+    border: 1px solid black;
+    border-radius: 20px ;
+    padding: 30px;
+    justify-content: space-between;
+    padding-bottom: 20px;
+    
+    
 }
+
+.contact-left{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.contact-right{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.contact-left a h3{
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.contact-right a h3{
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+
+/* Footer styling starts here */
+
+footer{
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+footer p{
+    font-size: 15px;
+    font-weight: 600;
+}
+
